# hale-bopp-etl

./: .cursorrules  .env.example  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ECONOMIC_EVALUATION.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ado-mirror.yml  ci.yml  secrets-scan.yml
common_utilities/: README.md  __init__.py
common_utilities/workflows/: __init__.py  prebuilt.py
config/orchestration/: example_transformations.yaml  pipelines.yaml
core/: __init__.py  config_loader.py  dag_factory.py  schema.py
core/operators/: __init__.py  http_ops.py
core/sensors/: __init__.py  file_sensor.py
core/utils/: logging_utils.py
dags/: expose_dags.py  master_orchestrator.py
docs/: ARCHITECTURE_OVERVIEW.md  FLOW_DESIGN.md  USER_MANUAL_AND_USE_CASES.md
etl_hale_bopp/: __main__.py  config_loader.py  definitions.py  executor.py  job_factory.py  runner.py  schema.py  watcher.py  webhook_app.py
etl_hale_bopp/ops/: bash_ops.py  http_ops.py  python_ops.py
etl_hale_bopp/sensors/: webhook_sensor.py
etl_hale_bopp/workflows/: prebuilt.py
hale_bopp_etl/: __main__.py  runner.py  watcher.py  webhook_app.py
scripts/: bootstrap.ps1  install.ps1
tests/: test_executor.py  test_runner.py  test_schema.py  test_watcher.py  test_webhook.py  test_workflows.py
