[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hale-bopp-etl"
version = "0.3.0"
description = "Config-driven lightweight ETL runner"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "httpx>=0.28",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
]

[project.scripts]
hale-bopp-etl = "hale_bopp_etl.__main__:main"

[tool.setuptools.packages.find]
include = ["hale_bopp_etl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
